[tool.poetry]
name = "open-interview"
version = "0.1.0"
description = ""
authors = ["kram1k <7685181@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.12"}
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
